--- a/index.html
+++ b/index.html
@@ -300,21 +300,21 @@
       <div class="at-user">
         <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/adhamdannaway/128.jpg"/></div>
         <div class="at-user__name">Xinjun Zhang</div>
-        <div class="at-user__title">CEO &amp; Co-Founder</div>
+        <div class="at-user__title">Co-Founder</div>
       </div>
     </div>
     <div class="at-column">
       <div class="at-user">
         <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg"/></div>
         <div class="at-user__name">Yang Yang</div>
-        <div class="at-user__title">CSO &amp; Co-Founder</div>
+        <div class="at-user__title">Co-Founder</div>
       </div>
     </div>
     <div class="at-column">
       <div class="at-user">
         <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/boheme/128.jpg"/></div>
         <div class="at-user__name">Yuan Yuan</div>
-        <div class="at-user__title">VP &amp; Co-Founder</div>
+        <div class="at-user__title">Co-Founder</div>
       </div>
     </div>
   </div>
